    HIGHLIGHTS.txt.

Verison 7.3  [ (to be determined) ]

    ENGINE:
        Class BitManipulator<T>:
            - Routines bits(), firstBit() and lastBit() are now constexpr.
        Class GroupExpression:
            - The string constructor now contracts terms like "aaaaBB" to become
              g0^4 g1^-2 (i.e., exponents will be used even if the input does
              not supply them).
        Class GroupPresentation:
            - Routine enumerateCovers() now accepts indices ≤ 11, not ≤ 7.
            - The string constructor now contracts terms like "aaaaBB" to become
              g0^4 g1^-2 (i.e., exponents will be used even if the input does
              not supply them).
        Class Perm<n>:
            - Extended the generic Perm<n> class to make its API as rich as the
              specialised classes for smaller n.  This means the generic class
              now supports ++ and < operators, pow(), order(), and
              isConjugacyMinimal().
            - Optimised several algorithms for the generic Perm<n> class
              that were originally quadratic in n.
            - The generic Perm<n> now offers the precomptuation-assisted
              operations cachedInverse().
            - New routines conjugate() and cachedConjugate(), to replace the
              three-way cachedComp() (which was designed for conjugation).
              The three-way cachedComp() is now deprecated; instead call
              cachedConjugate() if you are conjugating, or else call the
              two-way cachedComp() twice.
            - All Perm<n> classes now have precompute(), cachedInverse(),
              cachedComp(), cachedPow() and cachedOrder(), even for smaller n
              where these are unnecessary, to assist with writing generic code.
        Class PermClass<n>:
            - New class to describe a conjugacy class of permutations.
        Class PermGroup<n>:
            - New class to describe groups of permutations.
